# sage_mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
src/sage_mcp/: __init__.py  auth.py  server.py  settings.py
src/sage_mcp/client/: __init__.py  sage_client.py
src/sage_mcp/tools/: __init__.py  categories.py  detail.py  images.py  inventory.py  search.py
src/sage_mcp/types/: __init__.py  auth.py  common.py  errors.py  requests.py  responses.py
tests/: conftest.py  test_auth.py  test_client.py  test_integration.py  test_server.py  test_tools_categories.py  test_tools_detail.py  test_tools_images.py  test_tools_inventory.py  test_tools_search.py  test_types.py
