[project]
name = "sage-mcp"
version = "0.1.0"
description = "FastMCP server wrapping the SAGE Connect promotional products API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyright",
    "ruff",
]

[project.scripts]
sage-mcp = "sage_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: live Sage API tests"]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
